--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.143.216.53:9000/</sonar.host.url>
+		<sonar.host.url>http:/18.188.68.215:9000/</sonar.host.url>
 		<sonar.login>6b94f984dea483c5ce49e4d983531cde88e2d763</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
